Fix layout break when word is too big

--- a/webchat/components/chat/message/chat-message.css
+++ b/webchat/components/chat/message/chat-message.css
@@ -14,6 +14,7 @@
 
 .chat-message__text {
     grid-area: text;
+    word-break: break-word;
 }
 
 .chat-message__time {
